fixed the visual bug that was making the front landing page not look aligned up with the rest of the app

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,6 +20,8 @@ code {
     monospace;
 }
 
+
+
 .going_to_production_true {
 	color: green;
 }
@@ -39,10 +41,18 @@ code {
   align-items: center;
 }
 
+.container {
+    height: 100%;
+}
+
 @media screen and (max-width: 400px) {
     .productImg {
       height: 35vh;
       object-fit: scale-down;
+    }
+
+    .container{
+      height: 130%;
     }
   }
 
